package command_message.msgs;

message WorldStatusMessage
{
	// 1. For name information from model
	
	required int32 MessageType = 1;
	repeated string StringMessages = 2;
	
}